--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <h4>Water temperature?</h4>
         <input class="component" placeholder="°F">
         <button class="component">Analyze</button>
-        <p></p>
+        <p class="result"></p>
     </body>
 </html>
